parser/tests/bad/decl01-4.st
% re-declaration of identifier 'x'
%   variable formal

procedure p(var i: int, var i: int)
  % empty
end p
